--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <footer class="footer">
                 <div class="container">
                        <p style="text-align: center">
-                        © 2014 Daniel N. Hill - All rights reserved.
+                        © 2014 Daniel N. Hill -Last updated 11/07/2014.
                     </p>
                 </div>
 </footer>
