--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
 <link rel="stylesheet" type="text/css" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" href="./css/font-gscholar.css">
-
-<style>
-</style>
+<link rel="shortcut icon" href="./images/glasses.ico" />
 
 </head>
 <body>
@@ -63,7 +61,7 @@
 <footer class="footer">
                 <div class="container">
                        <p style="text-align: center">
-                        © 2014 Daniel N. Hill -Last updated 11/07/2014.
+                        © 2014 Daniel N. Hil - Last updated 11/07/2014.
                     </p>
                 </div>
 </footer>
