Fixed spacing issue in footer

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <footer class="footer">
                 <div class="container">
                        <p style="text-align: center">
-                        © 2014 Daniel N. Hil - Last updated 11/07/2014.
+                        © 2014 Daniel N Hill - Last updated 11/07/2014.
                     </p>
                 </div>
 </footer>
