Added tooltips to the navbar.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 <link rel="stylesheet" type="text/css" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" href="./css/font-gscholar.css">
+<link rel="stylesheet" type="text/css" href="./css/tooltip.css"> <!-- Taken from a gist by vasa-chi -->
+
 <link rel="shortcut icon" href="./images/glasses.ico" />
 
 </head>
@@ -32,11 +34,11 @@
                     <li class="active"><a href="#">Home</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a class="fa fa-linkedin fa-2x" href="https://www.linkedin.com/profile/view?id=116911708" target="_blank"></a>
-                    <li><a class="fa fa-github fa-2x" href="https://github.com/danamics" target="_blank"></a>
-                    <li><a class="fa fa-youtube fa-2x" href="https://www.youtube.com/channel/UCA5vHIJm536vK_-PaX_0mtg" target="_blank"></a>
-                    <li><a class="gs gs-icon gs-2x" href="http://scholar.google.com/citations?user=PiLAyg0AAAAJ" target="_blank"></a>
-                    <li><a class="fa fa-envelope fa-2x" href ="mailto:daniel.n.hill@gmail.com" target="_blank"></a>
+                    <li><a class="tooltipped tooltipped-s" data-tooltip="LinkedIn profile" href="https://www.linkedin.com/profile/view?id=116911708" target="_blank"><span class="fa fa-linkedin fa-2x "></span></a>
+                    <li><a class="tooltipped tooltipped-s" data-tooltip="GitHub page" href="https://github.com/danamics" target="_blank"><span class="fa fa-github fa-2x "></span></a>
+                    <li><a class="tooltipped tooltipped-s" data-tooltip="YouTube channel" href="https://www.youtube.com/user/danamics" target="_blank"><span class="fa fa-youtube fa-2x "></span></a>
+                    <li><a class="tooltipped tooltipped-s" data-tooltip="Google Scholar profile" href="http://scholar.google.com/citations?user=PiLAyg0AAAAJ" target="_blank"><span class="gs gs-icon gs-2x"></span></a>
+                    <li><a class="tooltipped tooltipped-s" data-tooltip="E-mail me" href="mailto:daniel.n.hill@gmail.com" target="_blank"><span class="fa fa-envelope fa-2x"></span></a> 
                 </ul>
             </div>
 
@@ -51,7 +53,7 @@
             <div class="col-lg-8" style="text-align: justify;">
                 <p>Hey there, I'm Dan. </p>
                 <p> I am a neuroscientist turned data scientist living in New York City.  I created this website to experiment with web apps, but this home page
-                is here to help you stalk me.  Why not get a head start by reading my <a href="./hill_daniel_cv.pdf">CV</a>.</p>
+                is here to help you stalk me.  Why not get started by reading my <a href="./hill_daniel_cv.pdf">CV</a>?</p>
                 <p> Here's <a href='./blammo/index.html'> a link </a>to the web page for the arcade machine that I built in 2005.  The games and the web design are a blast from the past!      
             </div>
         </div>
@@ -61,7 +63,7 @@
 <footer class="footer">
                 <div class="container">
                        <p style="text-align: center">
-                        © 2014 Daniel N Hill - Last updated 11/07/2014.
+                        © 2014 Daniel N. Hill - Last updated 11/11/2014.
                     </p>
                 </div>
 </footer>
