Added twitter link.

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <link rel="shortcut icon" href="./images/glasses.ico" />
 
 </head>
-<body>
+<body style="padding-top: 60px">
 
 
- <div class="navbar navbar-inverse">
+ <div class="navbar navbar-inverse navbar-fixed-top" >
     <div class="navbar-inner">
         <div class="container">
 
@@ -36,6 +36,7 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li><a class="tooltipped tooltipped-s" data-tooltip="LinkedIn profile" href="https://www.linkedin.com/profile/view?id=116911708" target="_blank"><span class="fa fa-linkedin fa-2x "></span></a>
                     <li><a class="tooltipped tooltipped-s" data-tooltip="GitHub page" href="https://github.com/danamics" target="_blank"><span class="fa fa-github fa-2x "></span></a>
+                    <li><a class="tooltipped tooltipped-s" data-tooltip="Twitter account" href="https://twitter.com/danamics" target="_blank"><span class="fa fa-twitter fa-2x "></span></a>
                     <li><a class="tooltipped tooltipped-s" data-tooltip="YouTube channel" href="https://www.youtube.com/user/danamics" target="_blank"><span class="fa fa-youtube fa-2x "></span></a>
                     <li><a class="tooltipped tooltipped-s" data-tooltip="Google Scholar profile" href="http://scholar.google.com/citations?user=PiLAyg0AAAAJ" target="_blank"><span class="gs gs-icon gs-2x"></span></a>
                     <li><a class="tooltipped tooltipped-s" data-tooltip="E-mail me" href="mailto:daniel.n.hill@gmail.com" target="_blank"><span class="fa fa-envelope fa-2x"></span></a> 
