--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
             <div class="col-lg-8" style="text-align: justify;">
                 <p>Hey there, I'm Dan. </p>
                 <p> I am a neuroscientist turned data scientist living in New York City.  I created this website to experiment with web apps, but this home page
-                is here to help you stalk me.  Why not get started by reading my <a href="./hill_daniel_cv.pdf">CV</a>?</p>
+                is here to help you stalk me.  Why not get started by reading my [<a href="./hill_daniel_resume.pdf">Resume</a>/<a 
+href="./hill_daniel_cv.pdf">CV</a>]?</p>
                 <p> Here's <a href='./blammo/index.html'> a link </a>to the web page for the arcade machine that I built in 2005.  The games and the web design are a blast from the past!      
             </div>
         </div>
