Updated where I live.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
             <div class="col-lg-4">  <img src="./images/headshot-crop.jpg" class="img-responsive" alt="Handsome devil"> </div>
             <div class="col-lg-8" style="text-align: justify;">
                 <p>Hey there, I'm Dan. </p>
-                <p> I am a neuroscientist turned data scientist living in New York City.  I created this website to experiment with web apps, but this home page
+                <p> I am a computer scientist turned neuroscientist turned data scientist living in the Bay Area.  I created this 
+website to 
+experiment with web apps, but this home page
                 is here to help you stalk me.  Why not get started by reading my [<a href="./hill_daniel_resume.pdf">Resume</a>/<a 
 href="./hill_daniel_cv.pdf">CV</a>]?</p>
                 <p> Here's <a href='./blammo/index.html'> a link </a>to the web page for the arcade machine that I built in 2005.  The games and the web design are a blast from the past!      
@@ -65,7 +67,7 @@ href="./hill_daniel_cv.pdf">CV</a>]?</p>
 <footer class="footer">
                 <div class="container">
                        <p style="text-align: center">
-                        © 2015 Daniel N. Hill - Last updated 03/05/2015.
+                        © 2015 Daniel N. Hill - Last updated 9/17/2015.
                     </p>
                 </div>
 </footer>
