Website update March 2021

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <li class="active"><a href="#">Home</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a class="tooltipped tooltipped-s" data-tooltip="LinkedIn profile" href="https://www.linkedin.com/profile/view?id=116911708" target="_blank"><span class="fa fa-linkedin fa-2x "></span></a>
+                    <li><a class="tooltipped tooltipped-s" data-tooltip="LinkedIn profile" href="https://www.linkedin.com/in/danamics/" target="_blank"><span class="fa fa-linkedin fa-2x "></span></a>
                     <li><a class="tooltipped tooltipped-s" data-tooltip="GitHub page" href="https://github.com/danamics" target="_blank"><span class="fa fa-github fa-2x "></span></a>
                     <li><a class="tooltipped tooltipped-s" data-tooltip="Twitter account" href="https://twitter.com/danamics" target="_blank"><span class="fa fa-twitter fa-2x "></span></a>
                     <li><a class="tooltipped tooltipped-s" data-tooltip="YouTube channel" href="https://www.youtube.com/user/danamics" target="_blank"><span class="fa fa-youtube fa-2x "></span></a>
@@ -50,15 +50,13 @@
 <div class="container">
     <div class="jumbotron">
         <div class="row">
-            <div class="col-lg-4">  <img src="./images/headshot-crop.jpg" class="img-responsive" alt="Handsome devil"> </div>
+            <div class="col-lg-3">  <img src="./images/headshot.jpg" class="img-responsive" alt="Handsome devil"> </div>
             <div class="col-lg-8" style="text-align: justify;">
                 <p>Hey there, I'm Dan. </p>
-                <p> I am a computer scientist turned neuroscientist turned data scientist living in the Bay Area.  I created this 
-website to 
-experiment with web apps, but this home page
-                is here to help you stalk me.  Why not get started by reading my [<a href="./hill_daniel_resume.pdf">Resume</a>/<a 
-href="./hill_daniel_cv.pdf">CV</a>]?</p>
-                <p> Here's <a href='./blammo/index.html'> a link </a>to the web page for the arcade machine that I built in 2005.  The games and the web design are a blast from the past!      
+                <p> I am a computer scientist turned neuroscientist turned machine learning scientist living in the Bay Area.  I currently manage a machine 
+learning team for Amazon Search in Berkeley, CA. Check out  my <a href="./hill_daniel_resume.pdf">resume</a> or <a 
+href="./hill_daniel_cv.pdf">CV</a>.</p>
+                <p> Also, here's <a href='./blammo/index.html'> a link </a>to the web page for the arcade machine that I built in 2005.  The games and the web design are a blast from the past!      
             </div>
         </div>
     </div>
@@ -67,7 +65,7 @@ href="./hill_daniel_cv.pdf">CV</a>]?</p>
 <footer class="footer">
                 <div class="container">
                        <p style="text-align: center">
-                        © 2017 Daniel N. Hill - Last updated 7/23/2017.
+                        © 2021 Daniel N. Hill - Last updated 3/19/2021.
                     </p>
                 </div>
 </footer>
